fixed display distortion

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -7,7 +7,7 @@
 #display {
     word-break: break-all;
     text-align: right;
-    min-height: 70px;
+    min-height: 82px;
     line-height: 70px;
     padding: 16px 8px;
     font-size: 25px;
